# sub_repos

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs
calculator/: README.md
calculator/backend/src/: main.rs
calculator/frontend/: index.html  script.js  style.css
calendar/: README.md
calendar/backend/: Cargo.toml
calendar/backend/src/: main.rs
calendar/frontend/: index.html  script.js  style.css
frontend/: script.js
wardrobe/: README.md  start.sh
wardrobe/backend/: Cargo.toml
wardrobe/backend/src/: main.rs  models.rs
wardrobe/frontend/: index.html
wardrobe/frontend/static/: script.js  style.css
